# personal-knowledge-base

./: .gitignore  CLAUDE.md  README.md  architecture.md  build_graph.py  changelog.md  clip.sh  pyproject.toml  screenshot_graph.py
docs/: architecture.md
raw/: 20250901-agent-first-data-systems.md  20260407-anthropiccom-news-contextual-retrieval.md  20260407-huyenchipcom--2025-01-07-agentshtml.md  20260407-ietf-draft-narajala-ans.md  20260407-pablorauzyname-dev-naur1985programmingpdf.md  20260407-youtube-Axd50ew4pco.md  20260408-arxiv-2509-07367.md  20260408-arxiv-2510-11977.md  20260408-githubcom-zarazhangrui-frontend-slides-tree-main.md  20260408-youngleaderstech-p-how-i-finally-sorted-my-claude-code-memor.md  20260414-arxivorg-pdf-250419874.md  20260420-arxivorg-html-260326524v1.md  nature-of-the-firm.txt
wiki/: graph.html  graph.json  index.md  metaphor-driven-design.md  program-lifecycle.md  programming-as-theory-building.md  software-modification-challenges.md  tacit-knowledge-in-software.md
wiki/agent-first-data-systems/: agent-first-data-systems-architecture.md  agentic-memory-store.md  agentic-speculation.md  branched-updates.md  probe-optimization.md  probes-and-briefs.md  sleeper-agents.md  summary-agent-first-data-systems.md
wiki/arxiv-2504-19874/: kv-cache-quantization.md  product-quantization-for-nearest-neighbor-search.md  quantized-johnson-lindenstrauss-transform.md  random-rotation-quantization.md  summary-arxiv-2504-19874.md  turboquant.md  vector-quantization-theory.md
wiki/arxiv-2509-07367/: boolean-satisfiability.md  llm-code-evolution.md  (+7 more)
(+55 files in other folders)
